--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -1,3 +1,6 @@
+   Release 1.23.4
+   Fixed %ISOLatin1Encoding character encoding table
+
    Release 1.23.3
    Fixed `provides` paths in META.info
 
