--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,16 @@
 Revision history for Term::Choose
 
 
+0.115   2016-05-28
+        - Fixed option 'mouse'
+
+0.114   2016-05-25
+        - 'clear' before writing the first screen
+
+0.113   2016-05-15
+        - Replaced underscores with hyphens in option- and routine-names
+        - Modified '.travis.yml'
+
 0.112   2016-04-27
         - Modified '.travis.yml'
 
@@ -33,8 +43,8 @@ Revision history for Term::Choose
 
 0.103   2016-03-01
         - Optional global win
-        - if ll and (pause() or index=1): on window-resize return -1
-        - ll works with 'choose', 'choose_multi' and 'pause'
+        - If 'll' and (pause() or index=1): on window-resize return -1
+        - 'll' works with 'choose', 'choose_multi' and 'pause'
         - Update documentation.
 
 0.102   2016-02-25
