git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "6b9f31e"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "6b9f31e"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-Choose-Util-p6/Changes
+++ b/kuerbis/Term-Choose-Util-p6/Changes
@@ -1,6 +1,18 @@
 Revision history for Term::Choose::Util
 
 
+0.016   2016-05-28
+        - Removed OO-interface (docu)
+
+0.015   2016-05-25
+        - Bugfix in 'end_term'
+
+0.014   2016-05-25
+        - Added OO-interface with a ncurses win attribute
+
+0.013   2016-05-15
+        - Replaced underscores with hyphens in option- and routine-names
+
 0.012   2016-04-27
         - Announcement incompatible changes
 
