git subrepo clone --force git://github.com/kuerbis/Term-TablePrint-p6.git kuerbis/Term-TablePrint-p6
subrepo:
  subdir:   "kuerbis/Term-TablePrint-p6"
  merged:   "5041352"
upstream:
  origin:   "git://github.com/kuerbis/Term-TablePrint-p6.git"
  branch:   "master"
  commit:   "5041352"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/kuerbis/Term-TablePrint-p6/Changes
+++ b/kuerbis/Term-TablePrint-p6/Changes
@@ -1,6 +1,13 @@
 Revision history for Term::TablePrint
 
 
+0.013   2016-05-28
+        - Removed option 'binary-filter'
+        - Update documentation
+
+0.012   2016-05-15
+        - Replaced underscores with hyphens in option- and routine-names
+
 0.011   2016-04-27
         - Announcement incompatible changes
 
