git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "76c701e"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "76c701e"
git-subrepo:
  version:  "0.2.3"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "87a8275"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -1,8 +1,10 @@
    Release 1.23.5
-   Fixed kerning of Courier, and other fonts without kerning data
-   `$font.stringwidth(..., :kern)` and `$font.kern(...)` both now work.
-   If the font lacks kerning data `:kern` is ignored and `$font.kern`
-   returns a single element.
+   - $.kern method now returns a two item list:
+     my ($kerned, $stringwidth) = $font.kern("RVX");
+   - Fixed kerning of Courier, and other fonts without kerning data
+     `$font.stringwidth(..., :kern)` and `$font.kern(...)` both now work.
+     If the font lacks kerning data `:kern` is ignored and `$font.kern`
+     returns a single element.
 
    Release 1.23.4
    Fixed %ISOLatin1Encoding character encoding table
