--- a/zoffixznet/perl6-Pastebin-Gist/Changes
+++ b/zoffixznet/perl6-Pastebin-Gist/Changes
@@ -1,4 +1,7 @@
 Revision history for Pastebin-Gist
 
+1.001002  2015-12-13
+  - Replaced buggy JSON encoder
+
 1.001001  2015-10-11
   - First version released on an unsuspecting world
