git subrepo clone --force git://github.com/zoffixznet/perl6-IRC-Client.git zoffixznet/perl6-IRC-Client
subrepo:
  subdir:   "zoffixznet/perl6-IRC-Client"
  merged:   "c655428"
upstream:
  origin:   "git://github.com/zoffixznet/perl6-IRC-Client.git"
  branch:   "master"
  commit:   "c655428"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/zoffixznet/perl6-IRC-Client/Changes
+++ b/zoffixznet/perl6-IRC-Client/Changes
@@ -1,7 +1,9 @@
 Revision history for IRC::Client
 
-unreleased
+3.006003
     - Improve docs by adding tables of contents
+    - Fixed inability to subscribe to numerics due to irc-\d+ not being a valid
+        Perl 6 identifier
 
 3.006002 2016-08-08
     - Emit irc-started before any connection is made
