git subrepo clone --force git://github.com/zoffixznet/perl6-WWW-Google-Time.git zoffixznet/perl6-WWW-Google-Time
subrepo:
  subdir:   "zoffixznet/perl6-WWW-Google-Time"
  merged:   "9a190a8"
upstream:
  origin:   "git://github.com/zoffixznet/perl6-WWW-Google-Time.git"
  branch:   "master"
  commit:   "9a190a8"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/zoffixznet/perl6-WWW-Google-Time/Changes
+++ b/zoffixznet/perl6-WWW-Google-Time/Changes
@@ -1,4 +1,10 @@
 Revision History for 'WWW-Google-Time' Perl 6 Distribution
 
+1.002002  2016-12-22
+  - Fix crash on 12-PM times
+
+1.002001  2016-12-22
+  - Added key with the DateTime object
+
 1.001001  2015-12-07
   - First version released on an unsuspecting world
