git subrepo clone --force git://github.com/zoffixznet/perl6-IRC-Client-Plugin-HNY.git zoffixznet/perl6-IRC-Client-Plugin-HNY
subrepo:
  subdir:   "zoffixznet/perl6-IRC-Client-Plugin-HNY"
  merged:   "4364c3e"
upstream:
  origin:   "git://github.com/zoffixznet/perl6-IRC-Client-Plugin-HNY.git"
  branch:   "master"
  commit:   "4364c3e"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/zoffixznet/perl6-IRC-Client-Plugin-HNY/Changes
+++ b/zoffixznet/perl6-IRC-Client-Plugin-HNY/Changes
@@ -1,4 +1,8 @@
 Revision History for 'IRC::Client::Plugin::HNY' Perl 6 Distribution
 
+2.001001  2016-12-21
+  - Port to new IRC::Client's API
+  - Fix all the bugs (hopefully?)
+
 1.001001  2015-12-20
   - First version released on an unsuspecting world
