--- a/ugexe/zef/README.pod
+++ b/ugexe/zef/README.pod
@@ -13,7 +13,7 @@ Perl6 Module Management
 
 =head4 Rakudobrew
 
-To install it via rakudobrew, please use the following command:
+To install via rakudobrew, please use the following command:
 
     $ rakudobrew build zef
 
@@ -27,22 +27,22 @@ To install it via rakudobrew, please use the following command:
 
     zef --help
 
-    # duh
+    # install the CSV::Parser distribution
     zef install CSV::Parser
 
-    # search for distribution names matching `CSV::Parser`
-    zef search CSV::Parser
+    # search for distribution names matching `CSV`
+    zef search CSV
 
     # detailed information for a matching distribution
     zef info CSV::Parser
 
-    # list known available distributions
+    # list all available distributions
     zef list
 
     # list reverse dependencies of an identity
     zef rdepends HTTP::UserAgent
 
-    # test project in current directory    
+    # test project in current directory
     zef test .
 
     # fetch a specific module only
@@ -51,31 +51,33 @@ To install it via rakudobrew, please use the following command:
     # fetch a module, then shell into its local path
     zef look CSV::Parser
 
-    # smoke test modules from all content storages
+    # smoke test modules from all repositories
     zef smoke
 
     # run Build.pm if one exists in given path
     zef build .
 
-    # Update ContentStorage package lists
+    # update Repository package lists
     zef update
 
-    # Upgrade all distributions (BETA)
+    # upgrade all distributions (BETA)
     zef upgrade
 
-    # Lookup module info by name/path/sha1
+    # upgrade specific distribution (BETA)
+    zef upgrade CSV::Parser
+
+    # lookup module info by name/path/sha1
     zef --sha1 locate 9FA0AC28824EE9E5A9C0F99951CA870148AE378E
 
 =head2 More CLI
 
 =head4 B<install> [*@identities]
 
-Note: The install process does not install anything until all other phases have completed. So if A requires B,
-and a user has requested to C<install A>, it would download A and B, possibly Build A and B, test A and B,
-and then finally install A and B but only if A and B passed all their tests. For instance: if A failed its
-tests then B will not be installed (even if it passed its own tests) without force.
+Note: The install process does not install anything until all phases have completed. So, if the user requested to C<install A>, and A required module B: both would be downloaded, potentially built, tested,
+and installed -- but only if both passed all their tests. For example: if module A failed its
+tests, then module B would not be installed (even if it passed its own tests) unless forced.
 
-[C<@identities>] can be in the form of a file path (starting with B<.> or B</>), URNs, URLs, paths, or identities:
+[C<@identities>] can take the form of a file path (starting with B<.> or B</>), URNs, URLs, paths, or identities:
 
     # IDENTITY
     `zef install CSV::Parser`
@@ -95,11 +97,11 @@ tests then B will not be installed (even if it passed its own tests) without for
 A request may contain any number and combination of these. Paths and URLs will be resolved first so they are available
 to fulfill any dependencies of other requested identities.
 
-Note: In the name portion of the B<URN> style a double I<--> indicates a I<::>. This is because modules can have I<->
+Note: In the name portion of the B<URN> style, a double I<--> indicates a I<::>. This is because modules can have I<->
 as part of their name. I<--> is probably valid too, but this makes my life a lot easier for now!
 
 B<Options>
-    
+
     # Install to a custom locations
     --install-to=<id> # site/home/vendor/perl, or
     -to=<id>          # inst#/home/some/path/custom
@@ -123,6 +125,9 @@ B<Options>
     # Disable testing
     --/test
 
+    # Disable build phase
+    --/build
+
     # Disable fetching dependencies
     --/depends
     --/build-depends
@@ -132,34 +137,35 @@ B<Options>
 
 Uninstall the specified distributions
 
-Note: Requires a a bleeding edge rakudo (not available in 6.c)
+Note: Requires a bleeding edge rakudo (not available in 6.c)
 
 =head4 B<update>
 
-Update the package indexes for all `ContentStorage` backends
+Update the package indexes for all `Repository` backends
 
-Note: Some `ContentStorage` backends, like the default Ecosystems, have an `auto-update` option in `config.json` that can be enabled
+Note: Some `Repository` backends, like the default Ecosystems, have an `auto-update` option
+in `resources/config.json` that can be enabled
 
-=head4 B<upgrade> I<BETA>
+=head4 B<upgrade> [*@identities] I<BETA>
 
-Upgrade all installed distributions
+Upgrade specified identities. If no identities are provided, zef attempts to upgrade all installed distributions.
 
 =head4 B<search> [$identity]
 
-How these are handled depends on the `ContentStorage` engine used, which by default is `Zef::ContentStorage::Ecosystems<p6c>`
+How these are handled depends on the `Repository` engine used, which by default is `Zef::Repository::Ecosystems<p6c>`
 
     $ zef -v --cpan --metacpan search URI
     ===> Found 4 results
-    -------------------------------------------------------------------------------
-    ID|From                                  |Package             |Description
-    -------------------------------------------------------------------------------
-    1 |Zef::ContentStorage::LocalCache       |URI:ver('0.1.1')    |A URI impleme...
-    2 |Zef::ContentStorage::Ecosystems<p6c>  |URI:ver('0.1.1')    |A URI impleme...
-    3 |Zef::ContentStorage::Ecosystems<cpan> |URI:ver('0.1.1')    |A URI impleme...
-    4 |Zef::ContentStorage::Ecosystems<cpan> |URI:ver('0.000.001')|A URI impleme...
-    5 |Zef::ContentStorage::MetaCPAN         |URI:ver('0.1.1')    |A URI impleme...
-    6 |Zef::ContentStorage::MetaCPAN         |URI:ver('0.000.001')|A URI impleme...
-    -------------------------------------------------------------------------------
+    ---------------------------------------------------------------------------
+    ID|From                              |Package             |Description
+    ---------------------------------------------------------------------------
+    1 |Zef::Repository::LocalCache       |URI:ver('0.1.1')    |A URI impleme...
+    2 |Zef::Repository::Ecosystems<p6c>  |URI:ver('0.1.1')    |A URI impleme...
+    3 |Zef::Repository::Ecosystems<cpan> |URI:ver('0.1.1')    |A URI impleme...
+    4 |Zef::Repository::Ecosystems<cpan> |URI:ver('0.000.001')|A URI impleme...
+    5 |Zef::Repository::MetaCPAN         |URI:ver('0.1.1')    |A URI impleme...
+    6 |Zef::Repository::MetaCPAN         |URI:ver('0.000.001')|A URI impleme...
+    ---------------------------------------------------------------------------
 
 =head4 B<info> [$identity]
 
@@ -168,7 +174,7 @@ View meta information of a distribution
     $ zef -v info HTTP::UserAgent
     - Info for: HTTP::UserAgent
     - Identity: HTTP::UserAgent:ver('1.1.16'):auth('github:sergot')
-    - Recommended By: Zef::ContentStorage::LocalCache
+    - Recommended By: Zef::Repository::LocalCache
     Author:  github:sergot
     Description:     Web user agent
     Source-url:      git://github.com/sergot/http-useragent.git
@@ -199,7 +205,7 @@ View meta information of a distribution
 
 B<Options>
 
-    # Extra details (ex: list dependencies and which ones are installed)
+    # Extra details (eg, list dependencies and which ones are installed)
     -v
 
 =head4 B<list> [*@from]
@@ -213,19 +219,19 @@ List known available distributions
     ===> Found via /home/nickl/.rakudobrew/moar-nom/install/share/perl6
     CORE:ver('6.c'):auth('perl')
 
-Note that not every `ContentStorage` may provide such a list, and such lists may only
-be a subset. For example: we don't have a way to get a list of every distribution stored
-on metacpan, but we *can* get the $x most recent additions (we use 100 for now)
+Note that not every Repository may provide such a list, and such lists may only
+be a subset. For example: We may not be able to get a list of every distribution
+on metacpan, but we *can* get the $x most recent additions (we use 100 for now).
 
-[C<@from>] allows you to show results from specific storages only:
+[C<@from>] allows you to show results from specific repositories only:
 
     zef --installed list perl   # Only list modules installed by rakudo itself
 
-    zef list cpan               # Only show available modules from the content storage
+    zef list cpan               # Only show available modules from the repository
     zef list p6c                # with a name field of `cpan` in the configuration
-    zef list cached             # (be sure the content storage is enabled in config)
+    zef list cached             # (be sure the repository is enabled in config)
 
-Otherwise results from all enabled content storages will be returned.
+Otherwise results from all enabled repositories will be returned.
 
 B<Options>
 
@@ -255,7 +261,7 @@ Run tests on each distribution located at [C<@paths>]
 
 Run the Build.pm file located in the given [C<@paths>]
 
-If you currently want to create a build hook, put the following dependency-free boilerplate
+If you want to create a build hook, put the following dependency-free boilerplate
 in a file named `Build.pm` at the root of your distribution:
 
     class Builder {
@@ -271,9 +277,9 @@ in a file named `Build.pm` at the root of your distribution:
         }
     }
 
-Set the env variable B<ZEF_BUILDPM_DEBUG=1> for additional debugging information
+Set the env variable B<ZEF_BUILDPM_DEBUG=1> for additional debugging information.
 
-I<Note: In the future a more appropriate hooking solution will replace this>
+I<Note: In the future, a more appropriate hooking solution will replace this.>
 
 =head4 B<look> [$identity]
 
@@ -346,7 +352,7 @@ The functionality is mostly there. The API to search and find a specific module 
 a query and takes a matching distribution name with a matching (or newest) version. It can also download, extract, and
 install as well. Other than polishing up the search API access it needs metacpan itself to host Perl6 distributions.
 
-You can enable it by setting I<"enabled" : 1> in the config under the ContentStorage::Ecosystems plugin, or temporarily
+You can enable it by setting I<"enabled" : 1> in the config under the Repository::Ecosystems plugin, or temporarily
 by passing the flag I<--cpan>
 
     # Search cpan in addition to other configuration defaults
@@ -355,11 +361,13 @@ by passing the flag I<--cpan>
     # Same as above, but disables the default ecosystem `p6c`
     $ zef -v --cpan --/p6c search CSV::Parser
 
-You can also use a beta version of MetaCPAN with I<--metacpan> which uses ContentStorage::MetaCPAN
+You can also use a beta version of MetaCPAN with I<--metacpan> which uses Repository::MetaCPAN
 
 =head3 Proxy support?
 
-All the default fetching plugins have proxy support
+All the default fetching plugins have proxy support, but you'll need to refer to the backend program's
+(wget, curl, git, etc) docs. You may need to set an I<ENV> variable, or you may need to add a command line
+option for that specific plugin in I<resources/config.json>
 
 =head3 Custom installation locations?
 
