git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "eb43b89"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "eb43b89"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,15 @@
 Revision history for Term::Choose
 
 
+0.118   2016-12-16
+        - Import subroutines by their names
+
+0.117   2016-12-10
+        - Constructor: named parameters
+
+0.116   2016-10-13
+        - Subroutines: use the default export
+
 0.115   2016-05-28
         - Fixed option 'mouse'
 
