git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "6e73f1c"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "6e73f1c"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-Util-p6/Changes
+++ b/kuerbis/Term-Choose-Util-p6/Changes
@@ -1,6 +1,15 @@
 Revision history for Term::Choose::Util
 
 
+0.019   2016-12-16
+        - Import subroutines by their names
+
+0.018   2016-12-10
+        - Constructor: named parameters
+
+0.017   2016-10-13
+        - Bugfix export subroutines
+
 0.016   2016-05-28
         - Removed OO-interface (docu)
 
