git subrepo clone --force git://github.com/kuerbis/Term-TablePrint-p6.git kuerbis/Term-TablePrint-p6
subrepo:
  subdir:   "kuerbis/Term-TablePrint-p6"
  merged:   "6f10d72"
upstream:
  origin:   "git://github.com/kuerbis/Term-TablePrint-p6.git"
  branch:   "master"
  commit:   "6f10d72"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-TablePrint-p6/Changes
+++ b/kuerbis/Term-TablePrint-p6/Changes
@@ -1,8 +1,18 @@
 Revision history for Term::TablePrint
 
 
+0.016   2016-12-16
+        - Import subroutines by their names
+
+0.015   2016-12-10
+        - Constructor: named parameters
+
+0.014   2016-10-13
+        - Subroutines: use the default export
+
 0.013   2016-05-28
         - Removed option 'binary-filter'
+        - Code refactoring
         - Update documentation
 
 0.012   2016-05-15
